# pasejo

./: .gitignore  Cargo.lock.license  Cargo.toml  Cross.toml  README.md  REUSE.toml  i18n.toml  rust-toolchain.toml  rustfmt.toml
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: dependabot-automerge.yml  release.yml  reuse.yml  verify.yml
dev/: Containerfile
docs/: README.md
docs/commands/: README.md  pasejo-cmd-config.md  pasejo-cmd-identity.md  pasejo-cmd-otp.md  pasejo-cmd-recipient.md  pasejo-cmd-secret.md  pasejo-cmd-store.md
docs/commands/pasejo-cmd-config.out/: config.toml
docs/commands/pasejo-cmd-identity.out/: config.toml
docs/guides/: README.md  how-to-add-identity.md  how-to-add-otp.md  how-to-add-recipient.md  how-to-add-secret.md  how-to-add-store.md  how-to-create-age-identity.md  how-to-create-age-recipient.md  how-to-enable-shell-completions.md  how-to-show-secret.md  how-to-use-hooks.md  how-to-use-pasejo-with-git.md  how-to-use-pasejo-with-systemd.md  how-to-use-yubikeys.md
docs/intro/: concepts.md  installation.md  quickstart.md
docs/migrations/: README.md  migrate-from-gopass.md  migrate-from-pass.md  migrate-from-passage.md  migrate-to-bitwarden.md
i18n/de/: pasejo.ftl
i18n/en/: pasejo.ftl
i18n/es/: pasejo.ftl
i18n/fr/: pasejo.ftl
i18n/it/: pasejo.ftl
i18n/ja/: pasejo.ftl
i18n/ko/: pasejo.ftl
i18n/zh/: pasejo.ftl
src/: cli.rs  configuration.rs  lib.rs  main.rs
src/adapters/: file_system.rs  file_system_rust_std.rs  file_system_std.rs  git.rs  git_native.rs  mod.rs  user_inputs.rs  vcs.rs
src/cli/: arguments.rs  atomic_write.rs  clipboard.rs  completer.rs  configuration.rs  constants.rs  environment_variables.rs  errors.rs  i18n.rs  logs.rs  merger.rs  mod.rs  parser.rs  printer.rs  prompts.rs  sandbox.rs
src/commands/: completions.rs  config.rs  dispatcher.rs  export.rs  hooks.rs  identities.rs  mod.rs  one_time_passwords.rs  recipient.rs  recipients.rs  secrets.rs  store_op.rs  stores.rs
src/downloader/: codeberg.rs  github.rs  gitlab.rs  keys.rs  mod.rs  username.rs
src/exporters/: bitwarden.rs  mod.rs  parser.rs
src/hooks/: executor.rs  files.rs  mod.rs
src/identities/: files.rs  mod.rs
src/models/: cli.rs  configuration.rs  mod.rs  password_store.rs
src/one_time_passwords/: merge.rs  mod.rs  parser.rs
src/recipients/: files.rs  format.rs  merge.rs  mod.rs  public_key.rs  read.rs  replace.rs  upsert.rs
src/secrets/: age.rs  decryption.rs  encryption.rs  files.rs  format.rs  merge.rs  mod.rs  reencryption.rs
src/stores/: api.rs  git.rs  local.rs  mod.rs
src/synchronizers/: git.rs  mercurial.rs  mod.rs  none.rs  pijul.rs  synchronizer.rs
src/vcs/: api.rs  git.rs  mercurial.rs  mod.rs  none.rs  vcs.rs
tests/: cli_tests.rs  interactive_tests.rs  trycmd_tests.rs
tests/cmd-de/errors/: de.md
tests/cmd-de/recipient/add/: de.md
tests/cmd-es/errors/: es.md
tests/cmd-es/recipient/add/: es.md
tests/cmd-fr/errors/: fr.md
tests/cmd-fr/recipient/add/: fr.md
tests/cmd-it/errors/: it.md
tests/cmd-it/recipient/add/: it.md
tests/cmd-ja/errors/: ja.md
tests/cmd-ja/recipient/add/: ja.md
tests/cmd-ko/errors/: ko.md
tests/cmd-ko/recipient/add/: ko.md
tests/cmd-zh/errors/: zh.md
tests/cmd-zh/recipient/add/: zh.md
tests/cmd/completion/: pasejo-completion-bash.md  pasejo-completion-elvish.md  pasejo-completion-fish.md  pasejo-completion-powershell.md  pasejo-completion-zsh.md
tests/cmd/config-migrations/before-hooks/: test.md
tests/cmd/config/get/: get-clipboard-notify.md  get-clipboard-timeout.md  get-ignore-missing-identities.md  get-key-download-timeout-seconds.md  get-pull-interval-seconds.md  get-unknown-option.md
tests/cmd/config/set/: set-clipboard-notify.md  set-clipboard-timeout.md  set-ignore-missing-identities.md  set-invalid-boolean.md  set-key-download-timeout-seconds.md  set-pull-interval-seconds.md  set-unknown-option.md
tests/cmd/export/bitwarden/: individual.md  organization.md
tests/cmd/help/: help.stdout  help.toml  pasejo-completion-elvish.md  pasejo-completion-fish.md  pasejo-completion.md  pasejo-config-get.md  pasejo-config-set.md  pasejo-config.md  pasejo-export-bitwarden.md  pasejo-export.md  pasejo-hook-get.md  pasejo-hook-run.md  pasejo-hook-set.md  pasejo-hook.md  pasejo-identity-add.md  pasejo-identity-list.md  pasejo-identity-remove.md  pasejo-identity.md  pasejo-otp-add.md  pasejo-otp-copy.md  pasejo-otp-list.md  pasejo-otp-move.md  pasejo-otp-remove.md  pasejo-otp-show.md  pasejo-otp.md  pasejo-recipient-add.md  pasejo-recipient-inherit.md  pasejo-recipient-list.md  pasejo-recipient-remove.md  pasejo-recipient.md  pasejo-secret-add.md  pasejo-secret-audit.md  pasejo-secret-copy.md  pasejo-secret-edit.md  pasejo-secret-generate.md  pasejo-secret-grep.md  pasejo-secret-insert.md  pasejo-secret-list.md  pasejo-secret-move.md  pasejo-secret-remove.md  (+14 more)
tests/cmd/hook/get/: get.md
tests/cmd/hook/run/: run.md
tests/cmd/hook/set/: set.md
tests/cmd/identity/add/: add-duplicate-to-global.md  add-duplicate-to-store.md  add-to-default-store.md  add-to-global-without-config.md  add-to-global.md  add-to-store-and-global.md  add-to-store.md  add-to-unknown-store.md  add-unknown-file.md  add-without-store.md
tests/cmd/identity/add-global/: add.md
tests/cmd/identity/add-to-store/: add.md
tests/cmd/identity/list/: list-from-default-store.md  list-from-first-store.md  list-global-without-store.md  list-global.md  list.md
tests/cmd/identity/remove/: remove-from-global.md  remove-from-store-and-global.md  remove-from-store.md  remove-unknown-global-identity-ignored.md  remove-unknown-global-identity.md  remove-unknown-store-identity-ignored.md  remove-unknown-store-identity.md  remove-without-store.md
tests/cmd/identity/remove-from-store/: remove.md
tests/cmd/identity/remove-global/: remove.md
tests/cmd/otp/add/: add-hotp-from-qrcode.md  add-hotp-from-url.md  add-manual-totp.md  add-otp-with-hooks.md  add-totp-from-url.md  (+1 more)
tests/cmd/recipient/: pasejo.md
vhs/: .gitignore  Containerfile  README.md  demo.tape  identity  recipient
(+204 files in other folders)
