# SPDX-FileCopyrightText: The pasejo Authors
# SPDX-License-Identifier: 0BSD

[package]
name = "pasejo"
description = "passage re-implementation in Rust for teams"
version = "1.0.0"
authors = ["Sebastian Hoß <seb@xn--ho-hia.de>"]
license = "0BSD"
edition = "2024"
rust-version = "1.90"
homepage = "https://github.com/metio/pasejo"
repository = "https://github.com/metio/pasejo"
keywords = ["password", "manager", "age", "passage", "pass"]
categories = ["command-line-utilities"]
readme = "README.md"
exclude = [
    ".github/*",
    "dev/*",
    "docs/*",
    "tests/*",
    "vhs/*",
]

[features]
default = []

[dependencies]
age = { version = "0.11.2", features = ["armor", "cli-common", "plugin", "ssh"] }
anyhow = { version = "1.0.100" }
arboard = { version = "3.6.1", default-features = false, features = ["wayland-data-control"] }
clap = { version = "4.5.53", features = ["derive"] }
clap_complete = { version = "4.5.61", features = ["unstable-dynamic"] }
clap-verbosity-flag = { version = "3.0.4" }
confy = { version = "1.0.0" }
const-str = { version = "0.7.1" }
directories = { version = "6.0.0" }
duct = { version = "1.0.0" }
env_logger = { version = "0.11.8" }
human-panic = { version = "2.0.5" }
log = { version = "0.4.29" }
image = { version = "0.25.9" }
inquire = { version = "0.9.1", features = ["editor"] }
notify-rust = { version = "4.11.7" }
otp-std = { version = "0.2.3", features = ["auth", "sha2", "unsafe-length"] }
passwords = { version = "3.1.16" }
qr2term = { version = "0.3.3" }
regex = { version = "1.12.2" }
rqrr = { version = "0.10.0" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.147" }
shlex = { version = "1.3.0" }
ssh-key = { version = "0.6.7", features = ["ed25519", "encryption"] }
termtree = { version = "0.5.1" }
toml = { version = "0.9.10" }
ureq = { version = "3.1.4" }
uuid = { version = "1.19.0", features = ["v7"] }
which = { version = "8.0.0" }

[dev-dependencies]
assert_cmd = { version = "2.1.1" }
assert_fs = { version = "1.1.3" }
#mockall = { version = "0.13.1" }
predicates = "3.1.3"
regex = { version = "1.12.2" }
serial_test = { version = "3.2.0" }
ssh-key = { version = "0.6.7", features = ["ed25519", "rsa"] }
trycmd = { version = "0.15.11" }

[target.'cfg(unix)'.dev-dependencies]
rexpect = { version = "0.6.2" }

[build-dependencies]
cc = "1.2.51"
